--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "keywords": [
     "Events"
   ],
-  "description": "This is a very simple events system.",
+  "description": "This is a very simple events system.\n\n\u4f9d\u8d56\u9879\uff1a\n    https://gitee.com/kevinwei133506/unity-custom-package-unity-singleton.git",
   "repository": {
     "url": "https://github.com/wsh-git/unity-custom-package-unityEvents.git",
     "type": "git",
